gcc/testsuite/rust/rustc/ui/rfc-2457/no_mangle_nonascii_forbidden.rs
#![feature(non_ascii_idents)]

#[no_mangle]
pub fn řųśť() {}  // { dg-error ".E0754." "" { target *-*-* } }

fn main() {}

